# gyosho

./: .gitignore  Cargo.toml  README.md  build.sh  raymarch_modular.sumi  ripple.glsl  sdf_shapes.sumi
examples/: bubbles.sumi  fractal.sumi  hello.sumi  neon.sumi  rain.sumi  raymarch.sumi  ripple.sumi  sdf_demo.sumi  sdf_primitives.sumi  seascape.sumi
hanga/: Cargo.toml  README.md
hanga/src/: gradient.wgsl  header.wgsl  main.rs  shader.wgsl  stdlib.wgsl
libsumi/src/: camera.rs  lib.rs  math.rs  noise.rs  sdf.rs
sumic/: Cargo.toml
sumic/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  preprocessor.rs
