[package]
name = "sumic"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
logos = "0.13" # The new lexer engine
naga = { version = "0.19", features = ["glsl-in", "msl-out", "wgsl-out"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sumic"
path = "src/main.rs"
